--- a/slicing-android/app/build.gradle
+++ b/slicing-android/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
+
+    // App framework
+    implementation 'com.crescentflare.jsoninflator:JsonInflatorLib:0.6.2'
 }
