Added page class and SHA256 extensions

--- a/slicing-android/app/build.gradle
+++ b/slicing-android/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     // App framework
     implementation 'com.crescentflare.jsoninflator:JsonInflatorLib:0.6.2'
 
+    // Other libraries
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     // Testing framework
     implementation 'junit:junit:4.12'
 }
