--- a/slicing-android/build.gradle
+++ b/slicing-android/build.gradle
@@ -4,6 +4,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.coroutines_version = '1.3.2'
     repositories {
         google()
         jcenter()
