Added viewlet utility

--- a/slicing-android/app/build.gradle
+++ b/slicing-android/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
 
     // App framework
     implementation 'com.crescentflare.jsoninflator:JsonInflatorLib:0.6.2'
+
+    // Testing framework
+    implementation 'junit:junit:4.12'
 }
