--- a/slicing-android/app/build.gradle
+++ b/slicing-android/app/build.gradle
@@ -44,7 +44,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
 
+    // Network
+    implementation 'com.squareup.okhttp3:okhttp:3.12.6'
+
     // App framework
+    implementation 'com.crescentflare.dynamicappconfig:DynamicAppConfigLib:1.3.0'
     implementation 'com.crescentflare.jsoninflator:JsonInflatorLib:0.6.2'
 
     // Other libraries
