--- a/slicing-android/app/src/main/AndroidManifest.xml
+++ b/slicing-android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.crescentflare.slicinggame">
 
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <!-- Application -->
     <application
         android:name=".BaseApplication"
@@ -8,6 +11,7 @@
         android:label="@string/global_app_name"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:usesCleartextTraffic="@bool/clearTextTraffic"
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="UnusedAttribute">
 
