--- a/slicing-ios/Podfile
+++ b/slicing-ios/Podfile
@@ -13,6 +13,7 @@ def app_pods
 
   # App framework pods
   pod 'DynamicAppConfig', '~> 1.3.4'
+  pod 'UniLayout', '~> 0.4.6'
   pod 'JsonInflator', '~> 0.6.2'
 end
 
