--- a/slicing-android/app/build.gradle
+++ b/slicing-android/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     // Network
     implementation 'com.squareup.okhttp3:okhttp:3.12.6'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
 
     // App framework
     implementation 'com.crescentflare.dynamicappconfig:DynamicAppConfigLib:1.3.0'
