--- a/slicing-ios/Podfile
+++ b/slicing-ios/Podfile
@@ -10,6 +10,7 @@ platform :ios, '9.3'
 def app_pods
   # Network pods
   pod 'Alamofire', '~> 4.9.1'
+  pod 'AlamofireImage', '~> 3.6'
 
   # App framework pods
   pod 'DynamicAppConfig', '~> 1.3.4'
