--- a/slicing-android/app/src/main/AndroidManifest.xml
+++ b/slicing-android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <!-- Application -->
     <application
